<resources>

    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="app_name">सुलतानवाडी ग्रामपंचायत</string>

    <string name="services">सेवा</string>
    <string name="services1">आमच्या सुविधा .</string>
    <string name="settings">सेटिंग्ज</string>
    <string name="settings_cap">सेटिंग्ज</string>
    <string name="share">शेअर</string>
    <string name="shareCategory">श्रेणी</string>
    <string name="shareName">नाव</string>
    <string name="shareSubCategory">उप श्रेणी</string>
    <string name="share_advisory">*कृषिकिंग: मार्केट रिपोर्ट-*</string>
    <string name="share_deary">*कृषिकिंग: जोडधंदा-*</string>
    <string name="share_expertcropadv">*कृषिकिंग: कृषितज्ञ सल्ला-*</string>
    <string name="share_general">*कृषिकिंग: चालू घडामोडी -*</string>
    <string name="share_hospital_info">*माण ग्रामपंचायत: आरोग्य -*</string>
    <string name="share_market">*कृषिकिंग: आजचे बाजारभाव -*</string>
    <string name="share_mobile">संपर्क क्रमांक -</string>
    <string name="share_offers">*कृषिकिंग: जाहिराती -*</string>
    <string name="share_query">*कृषिकिंग: शेतकरी प्रश्न -*</string>
    <string name="share_schoolinfo">*माण ग्रामपंचायत: शिक्षण -*</string>
    <string name="share_share_gov_scheme">*माण ग्रामपंचायत: योजना -*</string>
    <string name="share_str_order">Order Received=</string>
    <string name="share_traning">*कृषिकिंग: प्रशिक्षण/कार्यक्रम -*</string>
    <string name="share_villageinfo">*माण ग्रामपंचायत: सूचना -*</string>
    <string name="share_weather">*कृषिकिंग: हवामान -*</string>
    <string name="sharebody">"*_माण ग्रामपंचायत ऍप वरून शेयर_*
 http://dggram.in/maan/"</string>
    <string name="soil_type">माती प्रकार</string>
    <string name="solution_Unsucess">आपण दिलेल्या प्रश्नाचे उत्तर पाठवण्यास असमर्थ.</string>
    <string name="solution_empty">कृपया आपले उत्तर लिहा.</string>
    <string name="solution_sucess">आपण दिलेल्या प्रश्नाचे उत्तर यशस्वीरीत्या पाठवले आहे.</string>
    <string name="state">राज्य</string>
    <string name="status">स्थिती :</string>
    <string name="stop">थांबवा</string>
    <string name="str_COD_FiveYr">पंचवार्षिक ३६०० रु.(३० अंक घरपोच)</string>
    <string name="str_COD_ThreeYr">त्रैवार्षिक २१६० रु.(१८ अंक घरपोच)</string>
    <string name="str_COD_oneYr">वार्षिक ७२० रु.(६ अंक घरपोच)</string>
    <string name="str_Online_FiveYr">पंचवार्षिक ३००० रु.(६०० रु. सूट ३० अंक घरपोच)</string>
    <string name="str_Online_ThreeYr">त्रैवार्षिक १८०० रु.(३६० रु.सूट १८ अंक घरपोच)</string>
    <string name="str_Online_oneYr">वार्षिक ६२० रु.(१०० रु.सूट ६ अंक घरपोच)</string>
    <string name="str_RTO_link">आर टी ओ लिंक</string>
    <string name="str_aboutvillage">गावाविषयी</string>
    <string name="str_adhar_validation">कृपया, आपला १२ अंकी आधार नंबर तपासून पहा.</string>
    <string name="str_aeroplain_paymnet">एअर इंडिया तिकिट आरक्षित करणे</string>
    <string name="str_are_you_sure_to_canel">आपण या व्यवहारातून बाहेर पडू इच्छिता का?</string>
    <string name="str_arogya">आरोग्य</string>
    <string name="str_changeLang">भाषा बदल</string>
    <string name="str_checkoutmagazine1">"कृषिकिंगचे द्वैमासिक आगळ्यावेगळ्या रुपात. आता मिळवा वार्षिक, त्रैवार्षिक आणि पंचवार्षिक द्वैमासिक.

ई-पेमेंट केल्यास वार्षिक द्वैमासिकावर १०० रु., त्रैवार्षिक द्वैमासिकावर ३६० रु तर, पंचवार्षिक द्वैमासिकावर ६०० रुपयांची सूट."</string>
    <string name="str_checkoutmagazine2">ग्राहक जोड़ा योजना.</string>
    <string name="str_checkoutmagazine3">एक ग्राहक मिळवून दिल्यास एका ग्राहकामागे ५० रुपयांचा रिचार्ज.</string>
    <string name="str_colortheam">कलर थीम</string>
    <string name="str_cropAdvisory">कृषितज्ञ सल्ला</string>
    <string name="str_dairy">जोडधंदा</string>
    <string name="str_dakhale">दाखले</string>
    <string name="str_downalodRationApp">येथे पहा आपले रेशन कार्ड.</string>
    <string name="str_duration">"कार्यकाळ दि. :
"</string>
    <string name="str_edit_solution">उत्तर संपादित करा</string>
    <string name="str_email">ई-मेल</string>
    <string name="str_hintEmail">abc@gmail.com</string>
    <string name="str_home">होम</string>
    <string name="str_incometax">आयकर भरणे</string>
    <string name="str_invalid_email">ई-मेल तपासून टाका</string>
    <string name="str_invalid_mobile">मोबाईल नंबर तपासून टाका</string>
    <string name="str_limitVendor">अॅप इन अॅप निवडण्याची मर्यादा संपली आहे. कृपया कोणतेही एक हटवा आणि नविन जोडा .</string>
    <string name="str_magazine">ई-मासिक</string>
    <string name="str_magazine1">भारतातील पहिलेवहिले: अत्याधुनिक तंत्रज्ञान, मार्केट विश्लेषण आणि कृषिव्यवस्थेवर परिणाम करणाऱ्या राष्ट्रीय व जागतिक घडामोडींचे विश्लेषण करणारे एकमेव कृषिद्वैमासिक</string>
    <string name="str_magazine2">पूर्णपणे नवीन लेख, राष्ट्रीय व आंतरराष्ट्रीय दर्जाचे लेखक</string>
    <string name="str_magazine3">सुबक मांडणी, अत्युच्च छपाई व रंगीत आर्ट पेपर वाचनाचा अनुभव समृद्ध करते</string>
    <string name="str_magazine4">पुढील दोन महिन्याचे नियोजन पुरविले जाते</string>
    <string name="str_magazine5">मार्केट विश्लेषणातून तेजी मंदी अंदाज व टॉप ५ बाजारपेठ अहवाल संपूर्ण चार्ट दिला जातो.</string>
    <string name="str_magazine6">संशोधनात्मक लेख, यशोगाथा, महिलांसाठी उपयुक्त सदर</string>
    <string name="str_magazine7">प्रश्नांना उत्तरे आणि माहितीपूर्ण व्हिडीओ अॅपवरून पाहता येतात</string>
    <string name="str_mah_gov">महाराष्ट्र शासनाचे अधिकृत संकेतस्थळ</string>
    <string name="str_mah_turest">महाराष्ट्र पर्यटन</string>
    <string name="str_mahabhilekh">महाभूअभिलेख</string>
    <string name="str_mahasul">महसूल</string>
    <string name="str_marketMarquee">बाजार निवडा वर क्लिक करूं अपन कोणतेही ६ बाजार निवडू शकता . बाजारभाव मधे अपन निवडलेल्या पिकांचे सल्ले आपल्याला भेटतील</string>
    <string name="str_marketRate">बाजारभाव</string>
    <string name="str_marketReport">मार्केट रिपोर्ट</string>
    <string name="str_mecb_paymnet">महावितरण MSEB बिल भरणे</string>
    <string name="str_mgazine8">द्वैमासिक, वार्षिक ६ विशेषांक प्रत्येकी १२० रु. वार्षिक वर्गणीत रु. १२०/- ची सूट. वार्षिक वर्गणी रु. ६००/- मात्र.</string>
    <string name="str_mobileNumber">मोबाईल नंबर</string>
    <string name="str_mobile_paymnet">मोबाईल रीचार्ज Paytm</string>
    <string name="str_msg_order_failed">आपला व्यवहार अपूर्ण, कृपया पुन्हा प्रयत्न करा किंवा ग्राहक सेवा क्रमांकाशी संपर्क साधा. धन्यवाद !!</string>
    <string name="str_msrtc_paymnet">ST तिकिट आरक्षित करणे</string>
    <string name="str_myPage">माझ्याशी निगडीत</string>
    <string name="str_myRationCard">माझे रेशन कार्ड</string>
    <string name="str_myVillage">माझे गाव</string>
    <string name="str_news">चालू घडामोडी</string>
    <string name="str_notAbleSolve">माफ करा , आपणास ह्या प्रश्नाचे उत्तर देता येणार नाही.</string>
    <string name="str_notaddingVen">योग्य अॅप इन अॅप नाव निवडा !!!</string>
    <string name="str_order_magazine">मागवा</string>
    <string name="str_paymentCOD">कॅश ऑन डिलीव्हरी (COD)</string>
    <string name="str_paymentMode">भरणा पद्दत</string>
    <string name="str_paymentOnline">ई-पेमेंट / ऑनलाईन पेमेंट</string>
    <string name="str_payment_fail">व्यवहार अपूर्ण. कृपया पुन्हा प्रयत्न करा, धन्यवाद !!</string>
    <string name="str_payment_success">आपला व्यवहार यशस्वीरित्या पूर्ण. धन्यवाद !!</string>
    <string name="str_query">प्रश्न/उत्तर</string>
    <string name="str_queryApproved">आपण ह्या उत्तरास सहमती दिली आहे!!!</string>
    <string name="str_queryExpert">तज्ञ म्हणून नोंदणी करण्यासाठी</string>
    <string name="str_queryNotApproved">उत्तरास सहमती देण्यास असमर्थ!!!</string>
    <string name="str_railway_paymnet">रेल्वे तिकिट आरक्षित करणे</string>
    <string name="str_rateUs">आम्हाला स्टार द्या</string>
    <string name="feed_hint">आपला मौल्यवान अभिप्राय लिहा.</string>
    <string name="str_rationCard_alert">प्रिय वापरकर्ता,आपली रेशनिंग कार्डची माहिती उपलब्ध नाही. रेशन दुकानदार/ग्रामपंचायत मध्ये संपर्क करा .</string>
    <string name="str_rationTitle">डिजिटल ग्रामपंचायत</string>
    <string name="str_region_all_count">एकूण वापरकर्ते -</string>
    <string name="str_region_count">वापरकर्ते संख्या</string>
    <string name="str_region_distribute">महाराष्ट्रातील विभागनिहाय संख्या</string>
    <string name="str_region_name">विभागनिहाय</string>
    <string name="str_region_smsService">५५ लाख शेतकऱ्यांनी अनुभवली एसएमएस सेवा !</string>
    <string name="str_reportDownload">PDF डाऊनलोड झालेली आहे.</string>
    <string name="str_requestOffer">जाहिरात देण्यासाठी</string>
    <string name="str_retion">रेशन</string>
    <string name="str_saatbara">७/१२ पहा</string>
    <string name="str_school">शिक्षण</string>
    <string name="str_selectCrop">पिके निवडा</string>
    <string name="str_sendRequest">जाहिरातीसाठी नोंदणी</string>
    <string name="str_serverError">क्षमस्वः तांत्रिक अडचणीमुळे संपर्क जोडण्यास असमर्थ. कृपया काही वेळाने पुन्हा प्रयत्न करा. धन्यवाद .</string>
    <string name="str_setting">प्रोफाईल</string>
    <string name="str_sucessPen">प्रश्नाचे उत्तर काढून टाकले आहे!!!</string>
    <string name="str_title">शीर्षक</string>
    <string name="str_to">"ते
"</string>
    <string name="str_unSucessPen">आपण उत्तर काढून टाकण्यास असमर्थ !!!</string>
    <string name="str_venCustomer">सभासद</string>
    <string name="str_venLike">पसंती</string>
    <string name="str_vendor_list_select">निवडा</string>
    <string name="str_vendor_list_selected">निवडलेले</string>
    <string name="str_venstrip">आपण कोणतेही दोन अॅप इन अॅपची निवड करू शकता. जर आपण अगोदर दोन अॅप इन अॅपची निवड केलेली असेल तर कोणतेही एक हटवा आणि नविन निवडू शकता.</string>
    <string name="str_village">माहिती</string>
    <string name="str_village_paymnet">गावाचा कर भरणे</string>
    <string name="str_voting_portal">राष्ट्रीय मतदाता पोर्टल</string>
    <string name="str_ward_no">वार्ड क्र.</string>
    <string name="str_weather">हवामान</string>
    <string name="str_whatsApp_install">Dear custmor, You are not using Whats App.</string>
    <string name="str_yojana">योजना</string>
    <string name="str_zp_pune">Z P Pune</string>
    <string name="strip_dairy">पशुपालन व दुग्धव्यवसाय यासारखे जोडधंद्यात यशस्वी होण्यासाठी उपयुक्त अशी तांत्रिक माहिती.</string>
    <string name="strip_home">आजची सर्व माहिती येथे मिळेल, तसेच ही माहिती त्या त्या विभागामध्ये ही मिळेल.</string>
    <string name="strip_news">राष्ट्रीय व आंतरराष्ट्रीय स्तरावरील कृषी व इतर महत्वाच्या घडामोडींचा आढावा व विश्लेषण.</string>
    <string name="strip_selectMarket">आपण बाजारभावासाठी जे पिके निवडलेले आहेत, त्याच पिकांचे प्रश्न उत्तर विभागातून प्रश्न विचारू शकता.</string>
    <string name="strp_market">बाजार निवडा वर क्लिक करून, कोणतेही ६ बाजार निवडू शकता आणि निवडलेल्या पिकांविषयीच आपण प्रश्न विचारू शकता.</string>
    <string name="submit">सबमिट करा</string>
    <string name="submit1">Submit</string>
    <string name="submitQuery">प्रश्न पाठवा</string>
    <string name="submit_otp">सबमिट</string>
    <string name="subscription">सदस्यता</string>
    <string name="krk_appName">कृषिकिंग</string>
    <string name="success_video">यशोगाथा</string>
    <string name="sureDel1">आपल्याला प्रायोजक</string>
    <string name="sureDel2">यांची माहिती आणि ऑफर्सविषयी माहिती हवी आहे का ?</string>
    <string name="t_already">क्षमा करा, आपण आधीच बाजार भाव भरले आहेत..</string>
    <string name="t_max1">कमाल</string>
    <string name="title_activity_test">testActivity</string>
    <string name="title_activity_user_home_activity">Home</string>
    <string name="title_activity_user_home">Home</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
