<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:icon="@drawable/ic_front_home1" android:id="@id/nav_home" android:title="@string/str_home" />
    </group>
    <item android:title="@string/app_name">
        <menu>
            <group android:checkableBehavior="single">
                <item android:icon="@drawable/ic_myvillage" android:id="@id/nav_myVillage" android:title="@string/str_myVillage" />
                <item android:icon="@drawable/ic_school" android:id="@id/nav_school" android:title="@string/str_school" />
                <item android:icon="@drawable/ic_hopital" android:id="@id/nav_hospital" android:title="@string/str_arogya" />
                <item android:icon="@drawable/ic_gram_yojana" android:id="@id/nav_yojana" android:title="@string/str_yojana" />
            </group>
        </menu>
    </item>
    <item android:title="@string/krk_appName">
        <menu>
            <group android:checkableBehavior="single">
                <item android:icon="@drawable/ic_front__weather1" android:id="@id/nav_weather" android:title="@string/str_weather" />
                <item android:icon="@drawable/ic_front_crop1" android:id="@id/nav_marketReport" android:title="@string/str_marketReport" />
                <item android:icon="@drawable/ic_front_news1" android:id="@id/nav_news" android:title="@string/str_news" />
                <item android:icon="@drawable/ic_crop_adavisory" android:id="@id/nav_cropAdvisory" android:title="@string/str_cropAdvisory" />
                <item android:icon="@drawable/ic_front__dairy1" android:id="@id/nav_dairy" android:title="@string/str_dairy" />
                <item android:icon="@drawable/ic_front_magazine1" android:id="@id/nav_magazine" android:title="@string/str_magazine" />
                <item android:icon="@drawable/ic_front__mypage1" android:id="@id/nav_myPage" android:title="@string/str_myPage" />
                <item android:icon="@drawable/ic_front__setting1" android:id="@id/nav_setting" android:title="@string/str_setting" />
            </group>
        </menu>
    </item>
</menu>
